--- a/settings.json
+++ b/settings.json
@@ -1,63 +1,39 @@
 {
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "Aura Dracula Spirit (Soft)",
     "editor.cursorBlinking": "phase",
     "editor.fontFamily": "Cascadia Code",
     "editor.fontSize": 16,
-    "editor.fontWeight": "normal",
     "editor.fontLigatures": true,
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
+    "workbench.statusBar.visible": false,
     "symbols.hidesExplorerArrows": true,
-    "workbench.colorTheme": "Aura Dracula Spirit (Soft)",
+    "workbench.editor.showTabs": "single",
+    "workbench.activityBar.location": "hidden",
     "editor.minimap.enabled": false,
-    "cmake.configureOnOpen": true,
     "breadcrumbs.enabled": false,
+    "workbench.sideBar.location": "right",
+    "material-icon-theme.hidesExplorerArrows": true,
+    "workbench.tree.enableStickyScroll": false,
+    "workbench.tree.indent": 16,
+    "workbench.tree.renderIndentGuides": "none",
     "editor.stickyScroll.enabled": false,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.tree.indent": 20,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "window.commandCenter": false,
-    "workbench.layoutControl.enabled": false,
-    "editor.cursorSmoothCaretAnimation": "on",
-    "[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
+    "explorer.compactFolders": false,
+    "explorer.confirmDragAndDrop": false,
+    "explorer.confirmDelete": false,
+    "explorer.decorations.badges": false,
+    "git.decorations.enabled": false,
+    "window.titleBarStyle": "custom",
     "workbench.editor.empty.hint": "hidden",
-    "peacock.favoriteColors": [
-        {
-            "name": "Angular Red",
-            "value": "#dd0531"
-        },
-        {
-            "name": "Azure Blue",
-            "value": "#007fff"
-        },
-        {
-            "name": "JavaScript Yellow",
-            "value": "#f9e64f"
-        },
-        {
-            "name": "Mandalorian Blue",
-            "value": "#1857a4"
-        },
-        {
-            "name": "Node Green",
-            "value": "#215732"
-        },
-        {
-            "name": "React Blue",
-            "value": "#61dafb"
-        },
-        {
-            "name": "Something Different",
-            "value": "#832561"
-        },
-        {
-            "name": "Svelte Orange",
-            "value": "#ff3d00"
-        },
-        {
-            "name": "Vue Green",
-            "value": "#42b883"
-        }
-    ]
+    "workbench.navigationControl.enabled": false,
+    "workbench.layoutControl.enabled": false,
+    "custom-ui-style.font.sansSerif": "Dank Mono",
+    "editor.lineHeight": 1.8,
+    "editor.codeLens": false,
+    "scm.diffDecorations": "none",
+    "editor.guides.indentation": false,
+    "editor.renderLineHighlight": "none",
+    "workbench.tips.enabled": false,
+    "code-runner.runInTerminal": true
 }
