--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Aura Dracula Spirit (Soft)",
+    "workbench.colorTheme": "One Dark Pro Night Flat",
     "editor.cursorBlinking": "phase",
     "editor.fontFamily": "Cascadia Code",
     "editor.fontSize": 16,
